riotwebDeployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: riotweb
spec:
  selector:
    app: riotweb
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: v1
kind: Pod
metadata:
  name: riotweb
  labels:
    app: riotweb
spec:
  containers:
    - name: riotweb
      image: vectorim/riot-web
      ports:
        - containerPort: 80
    - name: sh
      image: busybox
      command:
        - "/bin/sh"
        - "-c"
        - "--"
      args:
        - "while true; do sleep 30; done;"
  restartPolicy: Never
