riotwebServiceClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: riotweb-cip
spec:
  selector:
    app: riotweb
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
