riotwebServiceNLB.yaml
apiVersion: v1
kind: Service
metadata:
  name: riotweb-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    # service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  selector:
    app: riotweb
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
